<resources>
    <string name="app_name" translatable="false">XPrivacyLua</string>
    <string name="channel_privacy" translatable="false">XPrivacyLua</string>

    <string name="title_license" translatable="false">
        This app is meant to be used to protect your privacy.
        <![CDATA[<br><br>]]>Copyright 2017-%1$d Marcel Bokhorst. All rights reserved.
        <![CDATA[<br><br>]]>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
        <![CDATA[<br><br>]]>This program is distributed in the hope that it will be useful but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the <![CDATA[<a href="http://www.gnu.org/licenses/gpl.txt">GNU General Public License</a>]]> for more details.
        <![CDATA[<br><br><strong>LuaJ</strong><br>]]>Copyright 2007-2013 LuaJ. All rights reserved. See the <![CDATA[<a href="http://luaj.sourceforge.net/license.txt">license</a>]]>.
        <![CDATA[<br><br><b>Glide</b><br>]]>Copyright 2014 Google, Inc. All rights reserved. See the <![CDATA[<a href="https://raw.githubusercontent.com/bumptech/glide/master/LICENSE">license</a>]]>.
        <![CDATA[<br><br><b>Android Support Library</b><br>]]>Copyright 2011 The Android Open Source Project. See the <![CDATA[<a href="https://android.googlesource.com/platform/frameworks/support/+/master/LICENSE.txt">license</a>]]>.
   </string>
    <string name="title_accept">I agree</string>
    <string name="title_deny">I disagree</string>

    <string name="title_fix">Fix</string>

    <string name="title_all">All</string>
    <string name="title_restrict">Restrict</string>
    <string name="title_bootloop">Restricting can cause a bootloop</string>
    <string name="title_force_stop">Force stop automatically</string>

    <string name="title_help_instructions">
        Tap on an app icon or name and tick restrictions to apply them.
        If possible, apps are automatically stopped to apply (or remove) restrictions immediately,
        but applying restrictions to some apps requires a device restart (see icons below).
        <![CDATA[<br><br>]]>Long press on an app name or icon to start the app.
        <![CDATA[<br><br>]]>See <![CDATA[<a href="https://github.com/M66B/XPrivacyLua/blob/master/README.md">the documentation</a>]]>
        and <![CDATA[<a href="https://github.com/M66B/XPrivacyLua/blob/master/FAQ.md">the frequently asked questions</a>]]> for more information.
    </string>
    <string name="title_help_installed">Restriction installed</string>
    <string name="title_help_system">Applying restrictions can result in problems</string>
    <string name="title_help_settings">App restriction settings</string>
    <string name="title_help_persistent">Applying restrictions requires a device restart</string>
    <string name="title_help_exception">Applying restriction failed (tap icon to see why)</string>

    <string name="menu_show">Show</string>
    <string name="menu_show_user">Show user apps</string>
    <string name="menu_show_icon">Show apps with icon</string>
    <string name="menu_show_all">Show all apps</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_notify_new">Notify on new apps</string>
    <string name="menu_restrict_new">Restrict new apps</string>
    <string name="menu_companion">Pro features</string>
    <string name="menu_readme">Documentation</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_donate">Donate</string>

    <string name="msg_no_service">Module not running or updated</string>
    <string name="msg_review_settings">Review privacy settings</string>
    <string name="msg_usage">Restricted \'%1$s\'</string>
    <string name="msg_exception">Error in %1$s</string>
    <string name="msg_restrict_sure">Are you sure to toggle \'%1$s\' for all apps?</string>
    <string name="msg_no_browser">No browser available to open link</string>

    <string name="group_determine_activity">Determine activity</string>
    <string name="group_get_applications">Get applications</string>
    <string name="group_get_calendars">Get calendars</string>
    <string name="group_get_call_log">Get call log</string>
    <string name="group_get_contacts">Get contacts</string>
    <string name="group_get_location">Get location</string>
    <string name="group_get_messages">Get messages</string>
    <string name="group_get_sensors">Get sensors</string>
    <string name="group_read_account">Read account name</string>
    <string name="group_read_clipboard">Read clipboard</string>
    <string name="group_read_identifiers">Read identifiers</string>
    <string name="group_read_network">Read network data</string>
    <string name="group_read_notifications">Read notifications</string>
    <string name="group_read_sync">Read sync data</string>
    <string name="group_read_telephony">Read telephony data</string>
    <string name="group_record_audio">Record audio</string>
    <string name="group_record_video">Record video</string>
    <string name="group_send_messages">Send messages</string>
    <string name="group_use_analytics">Use analytics</string>
    <string name="group_use_camera">Use camera</string>
    <string name="group_use_tracking">Use tracking</string>

    <string-array name="scopes" translatable="false">
        <item>android</item>
        <item>com.android.providers.settings</item>
        <item>eu.faircode.xlua</item>
    </string-array>

    <string name="pro_fingerprint" translatable="false">1062ae961d78854f6c9cd872c4388232849c799</string>
</resources>
